update: logo changes

--- a/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/patientdashboard/templates/patientdashboard/patient_base.html
@@ -620,7 +620,8 @@
         <!-- Logo -->
         <div class="header-left">
             <a href="/" class="logo">
-                <img src="{% static 'logo.png' %}" width="35" height="35" alt="Preclinic">
+                <img src="{% static 'ReeDuVie.png' %}" width="35" height="35" alt="Preclinic">
+
             </a>
         </div>
         <a id="toggle_btn" class="d-none d-lg-block" href="javascript:void(0);">
@@ -702,12 +703,12 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'patientdashboard:profile' %}">My Profile</a>
-                    <a class="dropdown-item" href="#">Settings</a>
                     <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
                 </div>
             </li>
-            
-            
+
+
+
         </ul>
     </div>
     
@@ -818,7 +819,7 @@
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <a href="/">
-                    <img src="{% static 'logo.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+                    <img src="{% static 'ReeDuVie.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
 
 
                     </a>
